RESOLVED FIXED293012
[Gtk][WPE][Skia] Setting WEBKIT_SKIA_GPU_PAINTING_THREADS=0 crashes
https://bugs.webkit.org/show_bug.cgi?id=293012
Summary [Gtk][WPE][Skia] Setting WEBKIT_SKIA_GPU_PAINTING_THREADS=0 crashes
Nikolas Zimmermann
Reported 2025-05-14 14:50:13 PDT
There's a logic error in SkiaPaintingEngine leading to a crash when WEBKIT_SKIA_GPU_PAINTING_THREADS is set to 0 - fix that.
Attachments
Nikolas Zimmermann
Comment 1 2025-05-14 14:59:08 PDT
EWS
Comment 2 2025-05-14 23:42:57 PDT
Committed 294946@main (a9691ca8fe8a): <https://commits.webkit.org/294946@main> Reviewed commits have been landed. Closing PR #45393 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.