[Gtk][WPE][Skia] Setting WEBKIT_SKIA_GPU_PAINTING_THREADS=0 crashes https://bugs.webkit.org/show_bug.cgi?id=293012

Reviewed by Carlos Garcia Campos.

To enforce CPU rendering we usually set `WEBKIT_SKIA_ENABLE_CPU_RENDERING=1`.
This causes ProcessCapabilities::canUseAcceleratedBuffers() to return
false globally. No GPU rendering is performed in that mode.

Nowadays by default we use threaded rendering with N CPU worker threads
and M GPU worker threads, where N by default is nCores/2 and M is 2 (when
more than 4 CPU cores are present, 1 otherwise).

Setting WEBKIT_SKIA_GPU_PAINTING_THREADS=0 is an alternative way to enforce
using CPU for tile rendering, but keeping the GPU usage allowed, e.g.
for accelerated ImageBuffers (used for accelerated filters). Currently
this mode crashes, as SkiaPaintingEngine contains a logic error:

- record() decides whether to use an GraphicsContext in accelerated mode
  based on the ProcessCapabilities::canUseAcceleratedBuffers().

- replay() layer assumes m_gpuWorkerPool is non-zero, if renderingMode
  is accelerated -- however when WEBKIT_SKIA_GPU_PAINTING_THREADS is set
  to 0 m_gpuWorkerPool is nullptr, while canUseAcceleratedBuffers() still
  returns true, leading to the crash.

Fix that, by null-checking m_gpuWorkerPool.

Canonical link: https://commits.webkit.org/294946@main